<resources>
    <string name="app_name">Temo</string>
    <string name="placeholder_input_text">Enter your message…</string>
    <string name="btn_text_morse_code">Morse Code</string>
    <string name="btn_text_running_text">Running Text</string>
    <string name="set_config_text_running_text_speed">Speed</string>
    <string name="set_config_color_background">Background</string>
    <string name="set_config_text_style">Font Style</string>
    <string name="set_config_text_color_text">Text Color</string>
    <string name="set_config_text_color_type_solid">Solid</string>
    <string name="set_config_text_color_type_gradient">Gradient</string>
    <string name="set_config_text_color_type_gradient_direction">Gradient Direction</string>
    <string name="set_config_text_color_type_gradient_horizontal">Horizontal</string>
    <string name="set_config_text_color_type_gradient_vertical">Vertical</string>
    <string name="set_config_text_outline">Outline</string>
    <string name="set_config_text_outline_desc">Add an outline to the text</string>
    <string name="set_config_text_outline_width">Width</string>
    <string name="set_config_text_shadow">Drop Shadow</string>
    <string name="set_config_text_shadow_desc">Add a shadow to the text</string>
    <string name="set_config_text_shadow_distance">Distance</string>
    <string name="set_config_text_shadow_radius">Radius</string>
    <string name="set_config_text_shadow_rotation">Rotation</string>
    <string name="set_config_text_mirror">Mirror Mode</string>
    <string name="set_config_text_mirror_desc">Flip text for mirror reflection</string>
    <string name="set_config_text_presets">Presets</string>
    <string name="btn_start">Start Screen</string>
    <string name="btn_download_and_share">Share Animate</string>
    <string name="set_config_morse_color">Morse Color</string>
    <string name="speed">Speed</string>
    <string name="set_config_morse_flash_screen">Flash Screen</string>
    <string name="set_config_morse_flash_screen_desc">Screen flashes with morse signal</string>
    <string name="set_config_morse_flashlight">Flashlight / Torch</string>
    <string name="set_config_morse_flashlight_desc">Use camera flash for morse signal</string>
    <string name="set_config_morse_sound">Sound</string>
    <string name="set_config_morse_sound_desc">Play audio tone for morse signal</string>
    <string name="set_config_morse_vibration">Vibration</string>
    <string name="set_config_morse_vibration_desc">Vibrate phone with morse signal</string>
    <string name="notice_camera_permission_denied">Camera access is needed to use the flashlight. You can enable it anytime!</string>
    <string name="notice_camera_permission_permanently_denied">Camera permission is turned off. Please allow it in your phone settings to turn on the flashlight.</string>
    <string name="notice_morse_output_required">Enable Screen Flash or Flashlight to display the Morse code.</string>
    <string name="notice_something_wrong">Something wrong please report developer %1$s</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="menu_support">Coffee Tip</string>
    <string name="menu_review">Rate Our App</string>
    <string name="menu_report_issue">Report Issue</string>
    <string name="menu_debug">Debug Panel</string>
    <string name="buy_coffee">Buy Me a Coffee?</string>
    <string name="text_dialog_support">Enjoying the app? Supporting my work with a coffee tip helps keep the project alive!</string>
    <string name="btn_text_remove_ad">Treat me to a coffee</string>
    <string name="btn_maybe_later">Maybe later</string>
    <string name="msg_has_support">Thank you for your support.</string>
    <string name="set_config_text_blink">Blink</string>
    <string name="set_config_text_blink_desc">Blink text animate</string>
    <string name="set_config_text_move">Move</string>
    <string name="set_config_text_move_desc">Move text animate</string>
    <string name="loading_creating">Creating animation %1$s</string>
</resources>